# kotlin-lsp

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
.tours/: feature-contributor-guide.tour
contrib/: extract-sources.py  kotlin-cli.py  pr.sh  release.sh  sync-skill.sh
contrib/copilot-extension/: README.md  extension.mjs
contrib/copilot-skill/: SKILL.md
contrib/vscode/: extension.js  kotlin-language-configuration.json  package.json
contrib/zed-extension/: Cargo.toml  README.md  extension.toml
demo/: cli.cast  demo.cast  demo.tape  demo_slowed.cast  demo_v2.cast
docs/: architecture.md  copilot.md  editors.md  features.md
docs/codebase/: .codebase-scan.txt  ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
src/: backend.rs  indexer.rs  indexer_tests.rs  inlay_hints.rs  inlay_hints_tests.rs  lines_ext.rs  lines_ext_tests.rs  main.rs  parser.rs  parser_tests.rs  queries.rs  resolver.rs  rg.rs  rg_tests.rs  semantic_tokens.rs  semantic_tokens_tests.rs  stdlib.rs  stdlib_tail.rs  str_ext.rs  str_ext_tests.rs  task_runner.rs  test_parse_lambda.rs  types.rs  types_tests.rs  util.rs  workspace_json.rs  workspace_json_tests.rs
src/backend/: actions.rs  cursor.rs  format.rs  handlers.rs  handlers_tests.rs  helpers.rs  helpers_tests.rs  mod.rs  nav.rs  rename.rs  rename_tests.rs
src/cli/: args.rs  complete.rs  extract_sources.rs  hover.rs  mod.rs  output.rs  run.rs  sources.rs  tokens.rs
src/features/: call_arg_diagnostics.rs  call_arg_diagnostics_tests.rs  code_actions.rs  code_actions_tests.rs  completion.rs  cursor.rs  definition.rs  fill_when.rs  fill_when_tests.rs  folding.rs  highlight.rs  hover.rs  implementation.rs  implementation_tests.rs  mod.rs  references.rs  references_tests.rs  rename.rs  signature_help.rs  symbols.rs  text_utils.rs  traits.rs  traits_impl.rs  workspace_symbols.rs
src/indexer/: apply.rs  apply_tests.rs  cache.rs  cache_tests.rs  cst_folding.rs  discover.rs  discover_tests.rs  doc.rs  doc_tests.rs  live_tree.rs  live_tree_impl.rs  live_tree_tests.rs  lookup.rs  lookup_tests.rs  node_ext.rs  node_ext_tests.rs  resolution.rs  resolution_tests.rs  scan.rs  scan_tests.rs  scope.rs  scope_tests.rs  test_helpers.rs  workspace_read_tests.rs  workspace_root.rs
src/language/: java.rs  java_tests.rs  kotlin.rs  kotlin_tests.rs  mod.rs  mod_tests.rs  swift.rs  swift_tests.rs
src/resolver/: complete.rs  fd.rs  find.rs  hierarchy.rs  import_edit.rs  infer.rs  mod.rs  (+4 more)
tests/: cli_complete.rs  lsp_smoke.rs  swift_grammar.rs
tree-sitter-swift/: Cargo.toml
tree-sitter-swift/src/: lib.rs
(+46 files in other folders)
