[package]
name        = "kotlin-lsp"
version = "0.3.0"
edition     = "2021"
description = "Fast, low-memory LSP server for Kotlin and Java. Instant startup, dot-completion, go-to-definition, hover — no JVM required."
license     = "MIT"
repository  = "https://github.com/Hessesian/kotlin-lsp"
homepage    = "https://github.com/Hessesian/kotlin-lsp"
readme      = "README.md"
keywords    = ["lsp", "kotlin", "java", "language-server", "tree-sitter"]
categories  = ["development-tools", "command-line-utilities"]

[[bin]]
name = "kotlin-lsp"
path = "src/main.rs"

[dependencies]
# LSP protocol
tower-lsp  = "0.20"
tokio      = { version = "1", features = ["full"] }

# Parsing
tree-sitter      = "0.22"
tree-sitter-java = "0.21"
# tree-sitter-kotlin on crates.io ships its own bundled grammar.
# Pin to the version that declared tree-sitter compat with 0.22.
# If 0.3 fails to resolve, try: git = "https://github.com/fwcd/tree-sitter-kotlin"
tree-sitter-kotlin = "0.3"

# Concurrent index storage (no Mutex needed)
dashmap = "5"

# Logging
log        = "0.4"
env_logger = "0.11"

# File discovery fallback
walkdir = "2"

# Index cache serialization
serde      = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
bincode  = "1"

[profile.release]
opt-level = 3
lto       = "thin"
codegen-units = 1
strip     = true

[dev-dependencies]
tempfile = "3"
